# tarkov-weapon-optimizer

./: .env.example  .gitignore  .nuitka  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  README_ZH.md  app.py  clean.bat  docker-compose.yml  gemini.md  i18n.py  launcher.py  package-lock.json  package.json  pixi.toml  pyproject.toml  queries.py  requirements.txt  tarkov-optimizer.spec  tasks.json  test_translation.py  weapon_optimizer.py
.github/workflows/: build.yml  deploy.yml  docker.yml
.patchright-cli/: page-1775712995508.yml  page-1775713006923.yml
backend/: requirements.txt  test_service.py
backend/app/: config.py  main.py  state.py
backend/app/api/: __init__.py  explore.py  gunsmith.py  info.py  optimize.py  status.py
backend/app/models/: schemas.py
backend/app/services/: optimizer.py  queries.py
deploy/: deploy.sh  start.sh  stop.sh  tarkov-optimizer.service
docs/superpowers/plans/: 2026-04-01-highs-lp-solver.md  2026-04-10-barter-toggle.md  (+1 more)
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  test_AK-74.lp  test_M4A1.lp  test_gunsmith_all.ts  test_multi_weapon_verification.ts  test_recoil_maximizer.ts  vite.config.ts
frontend/public/: 404.html  CHANGELOG.md  tasks.json  test_highs.html
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
legacy/: app.py  build.bat  build.sh  i18n.py  launcher.py  tasks.json
legacy/locales/: en.json  es.json  pl.json  ru.json  tr.json  zh.json
locales/: cs.json  de.json  en.json  hu.json  ja.json  ro.json  ru.json  sk.json  zh.json
(+55 files in other folders)
